Fixed collapsed navbar.toggle

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -22,3 +22,7 @@
 .navbar-left {
 	padding-top: 8px;
 }
+
+.navbar-toggle {
+  margin-top: 16px;
+}
